RESOLVED FIXED94791
[BlackBerry] draw <video> on <canvas> does not work
https://bugs.webkit.org/show_bug.cgi?id=94791
Summary [BlackBerry] draw <video> on <canvas> does not work
Robin Cao
Reported 2012-08-23 01:52:47 PDT
<video> as a source for <canvas> does not work on the blackberry port. Sample JavaScript code: canvas.drawImage(video,0,0,w,h); For a live test case, see http://html5doctor.com/demos/video-canvas-magic/demo1.html
Attachments
patch (2.79 KB, patch)
2012-08-23 02:00 PDT, Robin Cao
no flags
Robin Cao
Comment 1 2012-08-23 02:00:47 PDT
WebKit Review Bot
Comment 2 2012-08-23 02:52:03 PDT
Comment on attachment 160117 [details] patch Clearing flags on attachment: 160117 Committed r126412: <http://trac.webkit.org/changeset/126412>
WebKit Review Bot
Comment 3 2012-08-23 02:52:06 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.