[BlackBerry] draw <video> on <canvas> does not work https://bugs.webkit.org/show_bug.cgi?id=94791 PR #195866

Patch by Robin Cao <robin.cao@torchmobile.com.cn> on 2012-08-23
Reviewed by George Staikos.

Re-implement MediaPlayerPrivate::paintCurrentFrameInContext() in the
blackberry port. This method is mainly called from <canvas>, and it
is supposed to paint video frames using software rendering path.

On the other hand, MediaPlayerPrivate::paint() will choose accelerated
rendering if possible.

media/video-canvas-alpha.html covers this.

* platform/graphics/blackberry/MediaPlayerPrivateBlackBerry.cpp:
(WebCore::MediaPlayerPrivate::paint):
(WebCore):
(WebCore::MediaPlayerPrivate::paintCurrentFrameInContext):
* platform/graphics/blackberry/MediaPlayerPrivateBlackBerry.h:
(MediaPlayerPrivate):

Canonical link: https://commits.webkit.org/112640@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126412 268f45cc-cd09-0410-ab3c-d52691b4dbfc